# python-cookie-cutter

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md
.github/workflows/: test.yaml
container/: main.py  pyproject.toml
container/tests/: main_test.py  test_main.py
