[tool.poetry]
name = "cryptid-reinforcement-learning"
version = "0.1.0"
description = ""
authors = ["Josko de Boer <josko.deboer@xomnia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pandas = "^1.5.3"
seaborn = "^0.12.2"
pytest = "^7.2.1"
typer = "^0.7.0"
networkx = "^3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
